# Incept

./: .gitignore  README.md  build_payload.txt  pyproject.toml  pyproject.toml.bak  pyproject.uv.toml
src/bootstrapx/: template_manager.py
src/bootstrapx/models/: icon.py
src/incept/: __init__.py  asset_generator.py  chapter.py  cli.py  cli_payload.json  config.py  course.py  course_manager.py  coursemanager.py  courses.py  credentials_cache.json  dbfactory.py  dl_rebelway.py  dl_video.py  lesson.py  notiondb.py  payload.py  poster.py  templates.py  test.py  test_add_course.py  test_insert_courses.py  utils.bak  utils.patch  utils.py
src/incept/.config/: env.example
src/incept/.config/config_templates/: env.example
src/incept/.config/mapping/: notion_mapping.json
src/incept/.config/payload/: chapters.csv  chapters.json  cine_light.json  courses.json  full_courses.json  lessons.csv  lessons.json
src/incept/.config/templates/: default_chapter.j2  default_course.j2  default_lesson.j2  templates.json  video_chapter.j2  video_course.j2  video_lesson.j2
src/incept/databases/: credentials_cache.json  factory.py  notion.py
src/incept/media/: cover.py
src/incept/models/: notion_page.py
src/incept/template/: manager.py
src/incept/templates/: manager.py
src/incept/utils/: __init__.py  file_utils.py
