[tool.poetry]
name = "incept"
version = "0.1.66"
description = "A Python package for managing courses, projects, and directories with Notion integration."
authors = ["Suhail <suhailece@gmail.com>"]
readme = "README.md"
packages = [
    { include = "incept", from = "src" }
]

# This is the correct place to include extra files:
include = [
    "incept/.config/**"
]

[tool.poetry.scripts]
incept = "incept.cli:main"

[tool.poetry.dependencies]
python = "^3.11.7"
notionmanager = "^0.1.14"
oauthmanager = "^0.1.1"
platformdirs = "^3.0"
tabulate = "^0.9.0"
jinja2 = "^3.1.5"
pillow = "^11.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
